syntax = "proto3";
package desmos.reactions.v1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

import "desmos/reactions/v1/models.proto";

option go_package = "github.com/desmos-labs/desmos/v3/x/reactions/types";

// Query defines the gRPC querier service.
service Query {
  // Reactions allows to query the reactions present inside a subspace
  rpc Reactions(QueryReactionsRequest) returns (QueryReactionsResponse) {
    option (google.api.http).get =
        "/desmos/reactions/v1/{subspace_id}/reactions";
  }

  // RegisteredReactions allows to query the registered reaction of a subspace
  rpc RegisteredReactions(QueryRegisteredReactionsRequest)
      returns (QueryRegisteredReactionsResponse) {
    option (google.api.http).get =
        "/desmos/reactions/v1/{subspace_id}/registered-reactions";
  }

  // ReactionsParams allows to query the reaction params of a subspace
  rpc ReactionsParams(QueryReactionsParamsRequest)
      returns (QueryReactionsParamsResponse) {
    option (google.api.http).get = "/desmos/reactions/v1/{subspace_id}/params";
  }
}

// QueryReactionsRequest is the request type for the Query/Reactions RPC method
message QueryReactionsRequest {
  // Id of the subspace to query the reactions for
  uint64 subspace_id = 1;

  // (optional) Post id to query the reactions for
  uint64 post_id = 2;

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

// QueryReactionsResponse is the response type for the Query/Reactions RPC
// method
message QueryReactionsResponse {
  repeated Reaction reactions = 1 [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryRegisteredReactionsRequest is the request type for the
// Query/RegisteredReactions RPC method
message QueryRegisteredReactionsRequest {
  // Id of the subspace to query the registered reactions for
  uint64 subspace_id = 1;

  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 3;
}

// QueryRegisteredReactionsResponse is the response type for the
// Query/RegisteredReactions RPC method
message QueryRegisteredReactionsResponse {
  repeated RegisteredReaction registered_reactions = 1
      [ (gogoproto.nullable) = false ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryReactionsParamsRequest is the request type for the Query/ReactionsParams
// RPC method
message QueryReactionsParamsRequest {
  // Id of the subspace for which to query the params
  uint64 subspace_id = 1;
}

// QueryReactionsParamsResponse is the response type for the
// Query/ReactionsParam RPC method
message QueryReactionsParamsResponse {
  SubspaceReactionsParams params = 1 [ (gogoproto.nullable) = false ];
}